--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 transformers = "^4.35.2"
+tqdm = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
