--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ license = "MIT"
 python = "^3.10"
 transformers = "^4.35.2"
 tqdm = "^4.1.0"
+scikit-learn = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
