--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,6 @@ ignore_missing_imports = True
 
 [mypy-tokenizers.*]
 ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
