--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,11 @@
 [flake8]
 extend-ignore = E203,E501,E731
 exclude = dist,docs
+banned-modules =
+    typing.Union = Use `|` instead
+    typing.Optional = Use `| None` instead
+    typing.Dict = Use `dict` instead
+    typing.List = Use `list` instead
 
 [mypy]
 follow_imports = silent
